<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Animals GO</string>

    <!--
        PLUGINS
     -->
    <string-array name="plugins_list">
        <!-- CAMERA -->
        <item>com.thommil.animalsgo.gl.plugins.CameraDefault</item>
        <!-- PREVIEW -->
        <item>com.thommil.animalsgo.gl.plugins.PreviewDefault</item>
        <item>com.thommil.animalsgo.gl.plugins.PreviewToon</item>
        <!-- UI -->
        <item>com.thommil.animalsgo.gl.plugins.UIDefault</item>
    </string-array>

    <!-- CAMERA -->
    <string name="plugins_camera_default_name">Camera default</string>
    <string name="plugins_camera_default_summary">...</string>

    <!-- PREVIEW -->
    <string name="plugins_preview_default_name">Default</string>
    <string name="plugins_preview_default_summary">...</string>
    <string name="plugins_preview_toon_name">Toon</string>
    <string name="plugins_preview_toon_summary">...</string>

    <!-- UI -->
    <string name="plugins_ui_default_name">UI default</string>
    <string name="plugins_ui_default_summary">...</string>


    <!--
        PREFERENCES
     -->
    <string name="prefs_file_key">preferences</string>

    <!-- Prefs Camera -->
    <string name="prefs_camera">Camera</string>

    <!-- Prefs Camera quality -->
    <string name="prefs_camera_quality_auto_title">Auto Preview quality : </string>
    <string name="prefs_camera_quality_auto_summary">... </string>
    <string name="prefs_camera_quality_title">Manual preview quality : </string>
    <string name="prefs_camera_quality_summary">...</string>
    <string name="prefs_camera_quality_dialog">Choose quality level :</string>
    <string-array name="prefs_camera_quality_entries">
        <item>very low</item>
        <item>low</item>
        <item>medium</item>
        <item>high</item>
        <item>very high</item>
    </string-array>
    <string-array name="prefs_camera_quality_entries_values">
        <item>very low</item>
        <item>low</item>
        <item>medium</item>
        <item>high</item>
        <item>very high</item>
    </string-array>
    <string name="prefs_camera_quality_default">medium</string>

    <!-- Prefs Camera Plugins -->
    <string name="prefs_camera_plugin_default_title">Default plugin</string>
    <string name="prefs_camera_plugin_default_title_summary">...</string>
    <string name="prefs_camera_plugin_default_dialog">Choose default plugin :</string>
    <string-array name="prefs_camera_plugin_default_entries">
        <item>Default</item>
    </string-array>
    <string-array name="prefs_camera_plugin_default_entries_values">
        <item>camera/default</item>
    </string-array>
    <string name="prefs_camera_plugin_default_default">camera/default</string>

    <!-- Prefs Preview -->
    <string name="prefs_preview">Preview</string>

    <!-- Prefs Preview Plugins -->
    <string name="prefs_preview_plugin_default_title">Default plugin</string>
    <string name="prefs_preview_plugin_default_title_summary">...</string>
    <string name="prefs_preview_plugin_default_dialog">Choose default plugin :</string>
    <string-array name="prefs_preview_plugin_default_entries">
        <item>Default</item>
        <item>Toon</item>
    </string-array>
    <string-array name="prefs_preview_plugin_default_entries_values">
        <item>preview/default</item>
        <item>preview/toon</item>
    </string-array>
    <string name="prefs_preview_plugin_default_default">preview/default</string>

    <!-- Prefs UI -->
    <string name="prefs_ui">Interface</string>

    <!-- Prefs UI Plugins-->
    <string name="prefs_ui_plugin_default_title">Default plugin</string>
    <string name="prefs_ui_plugin_default_title_summary">...</string>
    <string name="prefs_ui_plugin_default_dialog">Choose default plugin :</string>
    <string-array name="prefs_ui_plugin_default_entries">
        <item>Default</item>
    </string-array>
    <string-array name="prefs_ui_plugin_default_entries_values">
        <item>ui/default</item>
    </string-array>
    <string name="prefs_ui_plugin_default_default">ui/default</string>


    <!--
        ERRORS
     -->
    <string name="error_camera_generic">An error has occured while using camera !</string>
    <string name="error_camera_not_found">Failed to find a suitable camera !</string>
    <string name="error_camera_not_supported">Camera2 not supported by device !</string>
    <string name="error_camera_timeout">Time out waiting to lock camera opening !</string>

    <string name="error_unsupported">Device not compliant !</string>


</resources>